--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -139,6 +139,9 @@
       <property name="frameShadow">
        <enum>QFrame::Sunken</enum>
       </property>
+      <property name="acceptRichText">
+       <bool>false</bool>
+      </property>
      </widget>
     </item>
    </layout>
